Add Titanic Modeling notebook, data, and README

--- a/Titanic Cleaning/Titanic_Cleaning.ipynb
+++ b/Titanic Cleaning/Titanic_Cleaning.ipynb
@@ -48,13 +48,13 @@
    "id": "73ae57b2",
    "metadata": {},
    "source": [
-    "# Limpieza inicial del dataset Titanic\n",
-    "Vamos a explorar y preparar los datos antes de hacer cualquier análisis."
+    "# Titanic Cleaning & Feature Importance (v1)\n",
+    "This notebook focuses on cleaning the Titanic dataset and training a simple model to evaluate feature importance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "57bc37c1",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,13 +204,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"Titanic_dataset.csv\")  # Ajusta si es .csv o .xlsx\n",
+    "df = pd.read_csv(\"Titanic_dataset.csv\") \n",
     "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "af2ba620",
    "metadata": {},
    "outputs": [
@@ -257,28 +257,28 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 1. Ver las primeras filas\n",
+    "# 1. View first rows of the dataset\n",
     "df.head()\n",
     "\n",
-    "# 2. Información general de columnas y tipos de datos\n",
+    "# 2. General information about columns and data types\n",
     "df.info()\n",
     "\n",
-    "# 3. Estadísticas descriptivas de las columnas numéricas\n",
+    "# 3. Descriptive statistics of numeric columns\n",
     "df.describe()\n",
     "\n",
-    "# 4. Cantidad de valores nulos por columna\n",
+    "# 4. Count of null values per column\n",
     "df.isna().sum()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1c9ea469",
    "metadata": {},
    "outputs": [
@@ -290,20 +290,20 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# --- Paso 1: Renombrar columnas a minúsculas para consistencia ---\n",
+    "# --- Step 1: Rename columns to lowercase for consistency ---\n",
     "df.columns = df.columns.str.lower()\n",
     "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "856c98e2",
    "metadata": {},
    "outputs": [
@@ -413,20 +413,20 @@
        "4            5         0       3    male  35.0      0      0   8.0500        S"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# --- Paso 2: Eliminar columnas irrelevantes o con demasiados nulos ---\n",
+    "# --- Step 2: Drop irrelevant columns or columns with too many nulls ---\n",
     "df = df.drop(['name', 'ticket', 'cabin'], axis=1)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "448fb728",
    "metadata": {},
    "outputs": [
@@ -434,14 +434,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\usuario\\AppData\\Local\\Temp\\ipykernel_8172\\1224976647.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\usuario\\AppData\\Local\\Temp\\ipykernel_18512\\243171470.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  df['age'].fillna(df['age'].median(), inplace=True)\n",
-      "C:\\Users\\usuario\\AppData\\Local\\Temp\\ipykernel_8172\\1224976647.py:6: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\usuario\\AppData\\Local\\Temp\\ipykernel_18512\\243171470.py:6: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -465,26 +465,26 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# --- Paso 3: Rellenar valores nulos ---\n",
-    "# Rellenar Age con la mediana\n",
+    "# --- Step 3: Fill missing values ---\n",
+    "# Fill Age with median\n",
     "df['age'].fillna(df['age'].median(), inplace=True)\n",
     "\n",
-    "# Rellenar Embarked con el valor más frecuente\n",
+    "# Fill Embarked with the most frequent value\n",
     "df['embarked'].fillna(df['embarked'].mode()[0], inplace=True)\n",
     "\n",
-    "# Verificar que ya no haya nulos\n",
+    "# Verify no nulls remain\n",
     "df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "08208cee",
    "metadata": {},
    "outputs": [
@@ -607,25 +607,25 @@
        "4       False        True  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Convertir 'sex' en variable binaria: male=0, female=1\n",
+    "# Convert 'sex' to binary variable: male=0, female=1\n",
     "df['sex'] = df['sex'].map({'male': 0, 'female': 1})\n",
     "\n",
-    "# Crear variables dummies para 'embarked'\n",
+    "# Create dummy variables for 'embarked'\n",
     "df = pd.get_dummies(df, columns=['embarked'], drop_first=True)\n",
     "\n",
-    "# Verificar el resultado\n",
+    "# Verify the result\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "46c6ac69",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
        "4       False        True  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,25 +750,25 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# 1️⃣ Variable objetivo\n",
-    "y = df['survived']   # lo que queremos predecir\n",
+    "# 1️⃣ Target variable\n",
+    "y = df['survived']   # what we want to predict\n",
     "\n",
-    "# 2️⃣ Features (eliminamos 'survived' para que no se mezcle)\n",
+    "# 2️⃣ Features (drop 'survived' so it does not mix)\n",
     "X = df.drop(columns=['survived'])\n",
     "\n",
-    "# 3️⃣ Escalar SOLO las columnas numéricas\n",
+    "# 3️⃣ Scale ONLY numeric columns\n",
     "scaler = StandardScaler()\n",
-    "X_scaled = X.copy()  # para no sobreescribir por si quieres comparar\n",
+    "X_scaled = X.copy()  # to not overwrite in case we want to compare\n",
     "num_cols = ['pclass', 'age', 'sibsp', 'parch', 'fare']\n",
     "X_scaled[num_cols] = scaler.fit_transform(X_scaled[num_cols])\n",
     "\n",
-    "# Revisar las primeras filas para comprobar los cambios\n",
+    "# Check first rows to verify changes\n",
     "X_scaled.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "1d0878d1",
    "metadata": {},
    "outputs": [
@@ -776,25 +776,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entrenamiento: (712, 9), Test: (179, 9)\n"
+      "Train: (712, 9), Test: (179, 9)\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Dividimos los datos: 80% entrenamiento, 20% test\n",
+    "# Split data: 80% train, 20% test\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X_scaled, y, test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
-    "# Revisamos los tamaños de los datasets\n",
-    "print(f\"Entrenamiento: {X_train.shape}, Test: {X_test.shape}\")\n"
+    "# Check dataset sizes\n",
+    "print(f\"Train: {X_train.shape}, Test: {X_test.shape}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "2810f7cf",
    "metadata": {},
    "outputs": [
@@ -825,16 +825,16 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
     "\n",
-    "# 1️⃣ Crear el modelo\n",
+    "# 1️⃣ Create the model\n",
     "model = RandomForestClassifier(random_state=42)\n",
     "\n",
-    "# 2️⃣ Entrenar el modelo con los datos de entrenamiento\n",
+    "# 2️⃣ Train the model with training data\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# 3️⃣ Predecir con los datos de test\n",
+    "# 3️⃣ Predict with test data\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
-    "# 4️⃣ Evaluar el modelo\n",
+    "# 4️⃣ Evaluate the model\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))\n"
@@ -845,27 +845,26 @@
    "id": "f74a5b74",
    "metadata": {},
    "source": [
-    "# --- Nota sobre resultados del Random Forest ---\n",
-    "# Accuracy: 0.838 → El modelo acierta aproximadamente un 83,8% de las veces.\n",
-    "# \n",
+    "# --- Note on Random Forest results ---\n",
+    "# Accuracy: 0.838 → The model predicts correctly about 83.8% of the time\n",
     "# Confusion Matrix:\n",
     "# [[94 11]\n",
     "#  [18 56]]\n",
-    "# Filas = valores reales, Columnas = predicciones\n",
-    "# - La mayoría de los errores vienen de sobrevivientes predichos como no sobrevivientes.\n",
+    "# Rows = actual values, Columns = predictions\n",
+    "# Most errors are survivors predicted as non-survivors\n",
     "#\n",
     "# Classification Report:\n",
-    "# - Precision: porcentaje de predicciones correctas por clase.\n",
-    "# - Recall: porcentaje de verdaderos positivos identificados.\n",
-    "# - F1-score: balance entre precision y recall.\n",
-    "# En nuestro caso:\n",
-    "# - Clase 0 (No sobrevivió): precision 0.84, recall 0.90 → el modelo identifica bien a los que no sobrevivieron.\n",
-    "# - Clase 1 (Sobrevivió): precision 0.84, recall 0.76 → algunos sobrevivientes se clasifican incorrectamente."
+    "# - Precision: percentage of correct predictions per class\n",
+    "# - Recall: percentage of true positives identified\n",
+    "# - F1-score: balance between precision and recall\n",
+    "# In our case:\n",
+    "# - Class 0 (Did not survive): precision 0.84, recall 0.90 → the model identifies non-survivors well\n",
+    "# - Class 1 (Survived): precision 0.84, recall 0.76 → some survivors are misclassified"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "7e77c029",
    "metadata": {},
    "outputs": [
@@ -884,20 +883,30 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Importancia de cada variable\n",
+    "# Feature importance\n",
     "importances = model.feature_importances_\n",
     "\n",
-    "# Asociamos los nombres de las columnas\n",
+    "# Associate with column names\n",
     "feature_importances = pd.Series(importances, index=X_train.columns)\n",
     "\n",
-    "# Ordenamos de mayor a menor importancia\n",
+    "# Sort from highest to lowest importance\n",
     "feature_importances.sort_values(ascending=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fc7e42d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"titanic_cleaned.csv\", index=False)"
    ]
   }
  ],
